--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -27,6 +27,10 @@ jobs:
     - name: Build Sphinx documentation
       run: |
         sphinx-build -b html docs/ docs/_build/html
+    
+    - name: Configure custom domain
+      run: |
+        echo 'flight-mech.creusy.fr' > docs/_build/html/CNAME
 
     - name: Deploy to GitHub Pages
       if: ${{ github.ref == 'refs/heads/main' }}
