--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,6 +19,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install -r requirements.txt
+        pip install -r requirements-add.txt
+        pip install -r requirements-dev.txt
     - name: Analysing the code with pylint
       run: |
         pylint ./flight_mech --fail-under 8
