--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,13 +19,28 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y xvfb libgl1-mesa-glx libegl1-mesa libxrandr2 libxrandr-dev \
+            libxinerama1 libxinerama-dev libxcursor1 libxcursor-dev libqt5gui5 \
+            libqt5opengl5 libosmesa6 mesa-utils
+
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-add.txt
         pip install -r requirements-dev.txt
+        pip install PyQt5 PyQt5-sip  # Ensure Qt is available
+
+    - name: Set up X virtual framebuffer
+      run: |
+        Xvfb :99 -screen 0 1024x768x24 &  # Start virtual display
+        export DISPLAY=:99
 
     - name: Run pytest
+      env:
+        DISPLAY: :99  # Ensure PyVista and Qt can access the display
       run: |
         pytest
