--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      DISPLAY: ':99.0'
 
     steps:
     - name: Checkout code
@@ -29,15 +31,8 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-add.txt
         pip install -r requirements-dev.txt
-        pip install PyQt5 PyQt5-sip  # Ensure Qt is available
-
-    - name: Set up X virtual framebuffer
-      run: |
-        Xvfb :99 -screen 0 1024x768x24 &  # Start virtual display
-        export DISPLAY=:99
 
     - name: Run pytest
-      env:
-        DISPLAY: :99  # Ensure PyVista and Qt can access the display
       run: |
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
         pytest
