--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Run pytest
       run: |
         /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
-        pytest
+        pytest --nbmake
