--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -17,6 +17,14 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'  # Use the Python version your project requires
+    
+    - name: Install pandoc
+      uses: pandoc/actions/setup@v1
+      with:
+        version: 2.19
+
+    # - name: Run pandoc
+    #   run: pandoc --version
 
     - name: Install dependencies
       run: |
